--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,6 +1,14 @@
 <div class="contents row">
   <% @albums.each do |album| %>
     <div class="content_post" style="background-image: url(<%= album.image %>);">
+       <div class="more">
+        <span><%= image_tag 'arrow_top.png' %></span>
+        <ul class="more_list">
+          <li>
+            <%= link_to '削除', album_path(album.id), data: { turbo_method: :delete } %>
+          </li>
+        </ul>
+      </div>
       <span class="name">
         <%= album.title %>
       </span>
